# introduccion_python

./: .gitignore  lesson4.py  main.py  new_1.py  pyproject.toml  taller.py
Material Complementario/Semana 1/: semana_1_leccion1_modelo_de_programa_y_ejecucion.py  semana_1_leccion3_ejecucion_condicional.py
Material Complementario/Semana 2/: semana_2_leccion_1_concepto_formal_de_modulo_y_libreria.py  semana_2_leccion_2_poo_fundamentos.py  semana_2_leccion_5_pandas_groupby_agg_merge_pivot.py  semana_2_leccion_6_pandas_advance.py  semana_2_leccion_7_tema_disenio_de_procesador_de_dataset.py  semana_2_leccion_8_desde_lo_tabular_hasta_el_objeto.py
Material Complementario/semana_1/: 03_variables_semantica_y_expresiones.py  08_diccionarios_y_conjuntos.py
Material Complementario/semana_2/: semana_2_leccion_4_pandas.py
Material_Complementario/Semana_1/: semana_1_leccion0_modelo_de_programa_y_ejecucion.py  semana_1_leccion1_modelo_de_programa_y_ejecucion.py  semana_1_leccion1_sintaxis_del_lenguaje_python_completa.py  setup.py  (+1 more)
datos_leccion/: notas_clinicas.txt  pacientes.csv  pacientes.tsv  pacientes_hta_exportacion.csv  pacientes_r.rds  pacientes_stata.dta  vacunacion.json
education/: education_notebook_authoring_marimo.md  notebook_spec.yml  preset_editor.py  s1p1.txt
generated_presets/: clase_01_introduccion_python_preset__20260219T084646Z.yaml  clase_01_introduccion_python_preset__20260219T084646Z__resolved.yml
lesson_data/: clinical_notes.txt  htn_patients_export.csv  patients.csv  patients.tsv  vaccination.json
public/: mini_SABE.csv  mini_SABE.parquet  panel_data.csv  style.css
(+71 files in other folders)
